--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 	<body>
-		<h1>Hellooo<h2>
-		<p>i am a good girl<p>
+		<h1>Hellooo</h2>
+		<p>i am a good girl</p>
+		<h2>helloo world</h2>
+	<p>i am from madurai</p>	
 	</body>
 </html>
 
